--- a/.github/workflows/opencv.yml
+++ b/.github/workflows/opencv.yml
@@ -22,4 +22,4 @@ jobs:
       uses: actions/upload-artifact@v1
       with:
         name: OpenCV
-        path: opencv/opencv-4.tar.xz
+        path: build-system/opencv/opencv-4.tar.xz
