--- a/.github/workflows/opencv.yml
+++ b/.github/workflows/opencv.yml
@@ -1,4 +1,4 @@
-name: Opencv
+name: CI
 
 on:
   push:
@@ -13,13 +13,13 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Change file mode
-      run: chmod +x opencv/build.sh
+      run: chmod +x opencv.sh
 
     - name: Run the script
-      run: ./opencv/build.sh
+      run: ./opencv.sh
       
     - name: Upload artifact
       uses: actions/upload-artifact@v1
       with:
-        name: OpenCV
-        path: build-system/buildroot/output/images/sdcard.img
+        name: OpenCV_RPI
+        path: build-system/opencv.tar.xz
