--- a/.github/workflows/opencv.yml
+++ b/.github/workflows/opencv.yml
@@ -13,10 +13,10 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Change file mode
-      run: chmod +x opencv.sh
+      run: chmod +x opencv/opencv.sh
 
     - name: Run the script
-      run: ./opencv.sh
+      run: ./opencv/opencv.sh
       
     - name: Upload artifact
       uses: actions/upload-artifact@v1
